# csgo-internal-dumper

./: Cargo.toml  README.md  TODO.md  dump.txt
src/: error.rs  main.rs  mapper.rs
src/collectors/: interfaces.rs  recvprops.rs
src/engine/: cvar_manager.rs  interface_manager.rs  mod.rs  native.rs  recvprop_manager.rs
src/mapper/: mod.rs
src/mapper/collectors/: convars.rs  interfaces.rs  mod.rs  recvprops.rs  vtable.rs
